--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "fs-extra": "^11.2.0",
     "vue-template-compiler": "^2.7.16"
+  },
+  "devDependencies": {
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.102"
   }
 }
