--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vue/compiler-sfc": "^3.4.10",
     "fs-extra": "^11.2.0",
     "vue-template-compiler": "^2.7.16"
   },
