--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "start": "nodemon --exec esno ./parse-vue-script.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@vue/compiler-sfc": "^3.4.10",
+    "esno": "^4.0.0",
     "fs-extra": "^11.2.0",
+    "nodemon": "^3.0.2",
     "vue-template-compiler": "^2.7.16"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.63",
-    "@swc/core": "^1.3.102"
+    "@swc/core": "^1.3.102",
+    "tsup": "^8.0.1",
+    "vitest": "^1.1.3"
   }
 }
